--- a/config/services.yaml
+++ b/config/services.yaml
@@ -45,6 +45,7 @@ parameters:
     logging.swiftmailer.recipient: ~
 
     super_admin.username: admin
+    super_admin.initial_password: ~
 
     # The base domain used for mail addresses
     emails.base_domain: yourcoop.local
@@ -84,7 +85,6 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-        public: true
         bind:
             $localCurrency: '%local_currency_name%'
             $appSecret: 'test'
@@ -93,7 +93,9 @@ services:
             $helloAssoApiPassword: '%helloasso_api_password%'
             $registrationDuration: '%registration_duration%'
             $shiftEmail: '%emails.shift%'
+            $adminEmail: '%emails.admin%'
             $superAdminUsername: '%super_admin.username%'
+            $superAdminInitialPassword: '%super_admin.initial_password%'
             $baseDomain: '%emails.base_domain%'
             $memberEmail: "%emails.member%"
             $projectName: "%project_name%"
@@ -109,6 +111,7 @@ services:
             $unlimitedBookDuration: '%unlimited_book_duration%'
             $placeLocalIpAddress: '%place_local_ip_address%'
             $codeGenerationEnabled: '%code_generation_enabled%'
+            $kernelProjectDir: '%kernel.project_dir%'
 
 
 
